# gh-actions-sandbox

./: .gitignore  LICENSE  README.md
.github/workflows/: hello-world.yml
_gha-workflows/: add-comment.yml  build-python.yml  demo-triggers.yml  dryrun-snakemake.yml  hello-checkout.yml  hello-world.yml  render-quarto.yml
python-package/: pyproject.toml
python-package/src/mypkg/: main.py
python-package/tests/: test_main.py
quarto-report/: _quarto.yml  notebook.qmd
snakemake-workflow/workflow/: Snakefile
